wrote the abstract and intro for our icra paper.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-Abstract goes here.
+Many locomotion tasks, such as sit-to-stand, involve changing postures while maintaining balance. Understanding and synthesizing these motions can have fundamental impacts in robotics, but controlling a humanoid robot to perform such motions present challenges. In this paper, we present a system that can automatically design robot controllers for these locomotion tasks. Our system uses simulation and optimization algorithms to find optimal controllers in a physically-simulated environment. It then relies on simulation calibration to transfer the controller from the virtual to the real world. Our experiments show that this system can automatically find successful controllers for a wide variety of locomotion tasks, including lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand.
