--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,6 @@
-\section{Conclusion}
+\section{Discussion}
 
-This section has presented an end-to-end solution to automatically design locomotion controllers for robots. This solution consists of a set of computational tools: a simulation tool that simulates the dynamics of the robot and its environment, an optimization tool that automatically searches for a controller in the virtual environment and a calibration tool that improves the simulation accuracy to ease controller transfer from the virtual to the real world. This powerful system allows us to efficiently design controllers of a humanoid robot to achieve three different tasks, rising from leaning, sitting and kneeling poses to an erect stance.
+This paper has presented an end-to-end solution to automatically design locomotion controllers for robots. This solution consists of a set of computational tools: a simulation tool that simulates the dynamics of the robot and its environment, an optimization tool that automatically searches for a controller in the virtual environment and a calibration tool that improves the simulation accuracy to ease controller transfer from the virtual to the real world. This powerful system allows us to efficiently design controllers of a humanoid robot to achieve three different tasks, rising from leaning, sitting and kneeling poses to an erect stance.
 
 Since the main goal of this work is to demonstrate that the computational tools developed for character animation, including physical simulation and controller optimization, can be applied to robotics, the biggest challenge is to cross the Reality Gap. The evaluation shows that our simulation calibration algorithm is effective to narrow down this gap. In all the examples, at most one iteration of calibration is needed before we can transfer the controller to the real robot. However, we want to emphasize that the goal of simulation calibration is not to find the  true simulation parameters. Instead, it finds a set of parameters that reduce the discrepancy between the simulation and the real experiment for a specific locomotion task. We observe that the simulation parameters optimized for the task of lean-to-stand can be entirely different from those of kneel-to-stand. In other words, the calibrated simulator is only valid for the current task and should not be used in a different task. If the tasks are the same but the initial configuations are slightly different, the result of simulation calibration can be reused. For example, in the task of lean-to-stand, we can use a simulator calibrated for a specific initial leaning angle to optimize controllers if the robot needs to stand up from a different initial leaning angle. In this case, our experiments show that the result of simulation calibration can be reused if the initial leaning angle is perturbed within five degrees. 
 
