--- a/icra.tex
+++ b/icra.tex
@@ -32,7 +32,7 @@ Simulation-Driven Robot Controller Design
 \thanks{$^{1}$The authors are with College of Computing, Georgia Institute of Technology, Atlanta, GA, USA. Email:
         {\tt\small \{jtan34, zxie47\}@gatech.edu}}%
 \thanks{$^{2}$The authors are with College of Computing, Georgia Institute of Technology, Atlanta, GA, USA. Email:
-        {\tt\small \{bboots, karenliu, turk\}@cc.gatech.edu}}%
+        {\tt\small \{bboots, turk, karenliu\}@cc.gatech.edu}}%
 }
 
 
