add one paragraph about contribution to the intro.

--- a/intro.tex
+++ b/intro.tex
@@ -3,6 +3,6 @@ Many of our daily locomotion activities involve changing our posture to a target
 
 We present a system that can automatically design controllers for humanoid robots to achieve these locomotion tasks. In this paper, a controller is a desired joint trajectory that a robot follows from the initial to the target poses. A successful controller, in addition, needs to keep the robot balanced during the motion. Finding a successful controller is challenging due to the high dimensional control space, nonlinear dynamics, discontinuous contact forces and delicate balance control. It often requires tedious manual tuning and a large number of expensive robot experiments. 
 
-To tackle these challenges, we design a system that consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulates the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal joint trajectories to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. In this work, we choose to focus on the actuator model and the physical parameters of the robot because they are the most relevant simulation parameters to the motions that we are interested in. To cross the Reality Gap, we introduce \emph{simulation calibration}. During simulation calibration, we collect the real performance data on the robot, and use it to improve our physical simulator. We optimize a set of simulation parameters to minimize the discrepancy between the simulation results and the collected real data. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in controller optimization to improve the quality of the controller. 
+To tackle these challenges, we design a system that consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal joint trajectories to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. In this work, we choose to focus on the actuator model and the physical parameters of the robot because they are the most relevant simulation parameters to the motions that we are interested in. To cross the Reality Gap, we introduce \emph{simulation calibration}. During simulation calibration, we collect the real performance data on the robot, and use it to improve our physical simulator. We optimize a set of simulation parameters to minimize the discrepancy between the simulation results and the collected real data. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in controller optimization to improve the quality of the controller. We evaluate our system using four locomotion tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful controllers for all the tasks efficiently and automatically.
 
-We evaluate our system using four locomotion tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful controllers for all the tasks efficiently and automatically. As a result, our system drastically reduces the number of time-consuming robot experiments and replaces the tedious manual tuning with automatic optimization processes.
+The main contribution of this paper is a complete pipeline that can automatically design robot controllers for a wide range of locomotion tasks. Starting from task specifications, our system can find controllers that operate on the robot, with minimal human intervention. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. This simulation-driven approach can effectively cut the time and the cost of designing robot controllers.
